example/errors/interpret/_external_library_not_found.box
// this error cannot be accessed
add a;
